# ChangeLog for media-libs/ladspa-sdk
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-libs/ladspa-sdk/ChangeLog,v 1.51 2010/05/28 10:10:16 maekke Exp $

  28 May 2010; Markus Meier <maekke@gentoo.org> ladspa-sdk-1.13-r1.ebuild:
  x86 stable, bug #304033

  02 Apr 2010; Jeroen Roovers <jer@gentoo.org> ladspa-sdk-1.13-r1.ebuild:
  Stable for HPPA (bug #304033).

  20 Mar 2010; Raúl Porcel <armin76@gentoo.org> ladspa-sdk-1.13-r1.ebuild:
  alpha/sparc stable wrt #304033

  15 Feb 2010; Joseph Jezak <josejx@gentoo.org> ladspa-sdk-1.13-r1.ebuild:
  Marked ppc/ppc64 stable for bug #304033.

  09 Feb 2010; Pacho Ramos <pacho@gentoo.org> ladspa-sdk-1.13-r1.ebuild:
  amd64 stable, bug 304033

  22 Mar 2008; Santiago M. Mola <coldwind@gentoo.org>
  ladspa-sdk-1.13.ebuild:
  amd64 stable wrt bug #208032

  01 Mar 2008; Alexis Ballier <aballier@gentoo.org>
  +files/ladspa-sdk-1.13-fbsd.patch, ladspa-sdk-1.13-r1.ebuild:
  fix build on g/fbsd

  01 Mar 2008; Alexis Ballier <aballier@gentoo.org>
  +files/ladspa-sdk-1.13-asneeded.patch, ladspa-sdk-1.13-r1.ebuild:
  Fix linking of filter.so with asneeded

*ladspa-sdk-1.13-r1 (14 Feb 2008)

  14 Feb 2008; Diego Pettenò <flameeyes@gentoo.org>
  +files/ladspa-sdk-1.13-properbuild.patch, +ladspa-sdk-1.13-r1.ebuild:
  Revision bump, use a new patch to handle the makefile, sent upstream hoping
  for it to be integrated in the next release. This also solves bug #209718 as
  it respect LDFLAGS (and also LD now).

  31 Jan 2008; nixnut <nixnut@gentoo.org> ladspa-sdk-1.13.ebuild:
  Stable on ppc wrt bug 208032

  30 Jan 2008; Brent Baude <ranger@gentoo.org> ladspa-sdk-1.13.ebuild:
  Marking ladspa-sdk-1.13 ppc64 for bug 208032

  30 Jan 2008; Raúl Porcel <armin76@gentoo.org> ladspa-sdk-1.13.ebuild:
  alpha/sparc stable wrt #208032

  30 Jan 2008; Dawid Węgliński <cla@gentoo.org> ladspa-sdk-1.13.ebuild:
  Stable on x86 (bug #208032)
