@@ -1,3 +1,6 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 AUX ladspa-sdk-1.12-darwin.patch 3452 RMD160 3b7faca66085da67d56b2d9966400237e3a16f6c SHA1 cf421bfc2e04f13c5ae18762815a8169c6ea2b4a SHA256 f3aadd65dd75cb6e9b13e717b199b83ed1b76c38d83915cccdc83fa6badfdf4c
 AUX ladspa-sdk-1.12-fbsd.patch 895 RMD160 4ba94766072abe0d42186362f9cb23a45ba087e5 SHA1 92f0976ac17794be166fefb18578d83505b89ca1 SHA256 58eb6255f3e204410075052d5ca3cfa5b6da9a33d4e2435d36665a50cf7a7afb
 AUX ladspa-sdk-1.12-gcc4.patch 968 RMD160 2bb125aa82309250710b47bd915718d5a96dd2ba SHA1 8587adb5149d2b895f1662bbd7ee4aa448254036 SHA256 e3048ed6944552d073a9237e6010e43477d2359b7ca98b8c39258865a005b37a
@@ -9,7 +12,14 @@ AUX ladspa-sdk-1.13-properbuild.patch 3020 RMD160 e9a344e42ae28bd1c25fca187b5750
 DIST ladspa_sdk_1.12.tgz 71165 RMD160 7967731c28785287691655d9346cf46654f4235b SHA1 36a3a7a00f96281ca443dcae15d33f462398c4d4 SHA256 66a5be1b0c54aba86dbb24a2e5e83604d0d7a8c0645fcb64579ec2966e25689c
 DIST ladspa_sdk_1.13.tgz 70540 RMD160 e9eeae8edd24a6890fac3e34c4b55f844f44f8a0 SHA1 2b69e28afb62c0d97943124f48ed82de796f83ed SHA256 b5ed3f4f253a0f6c1b7a1f4b8cf62376ca9f51d999650dd822650c43852d306b
 EBUILD ladspa-sdk-1.12-r2.ebuild 1671 RMD160 b8611e7ba50f735402e70323f3542a5db95295fb SHA1 64afcb697e98f0dc4dcc60e8c5e81bcc0e06f41a SHA256 939c608d075054988c1383c30a58eabfbd2d59e081f47559a66becf20c00e302
-EBUILD ladspa-sdk-1.13-r1.ebuild 1518 RMD160 dcd2a04e00a89c9198d293c904e4837b6401f6a4 SHA1 45411a053e0118dfd4a023dc0d7680f9435744b5 SHA256 56104b8da0e49009d85c24ee1aca8c7d2ff2b1aeedbcea9fc62ee39b9badc145
+EBUILD ladspa-sdk-1.13-r1.ebuild 1425 RMD160 2846faf9d1e4dff83e45a090d14a22d0d33e035e SHA1 25b4c8ad56c9d8147e0c6b3e2b7950899a80383f SHA256 7a91f14c9e74531c38d9bb7a36cb5074e2586a98053de07ecf4383e0c1173b7e
 EBUILD ladspa-sdk-1.13.ebuild 1659 RMD160 c2bb5080483271537a2cf90f6eab7444bd9c9697 SHA1 a7ebc579c0c8d26bdd7ab10ac0bad9b7fdb400b7 SHA256 e17b4c1af507a657b2d4843e1b4993a574ac6d4870b9b36aee26f65a4a5045e1
-MISC ChangeLog 6850 RMD160 fa6696ca88995bb8b747413632b882b8fd183848 SHA1 e55df03a56b90d3ef6ad87ff0ab19bac77422884 SHA256 db2dd1de3e8007597b174af53b1ec63aa54e383ba56f9da5d40c41cd32f18071
+MISC ChangeLog 7090 RMD160 fe7fe2082104d3192a5c704da64fa26d1165ce3e SHA1 95f1191b92414fd96dfb80da3575cb8a5baa544f SHA256 65423bd0d6dff6876deac30b61f705df51198623830068b1d96b0b4eec8ac13f
 MISC metadata.xml 161 RMD160 2738d17827a71b5ccbadae4c4f909d2b57d147b0 SHA1 90201ddb830142147774cc7b7b5178fbd0a9af0c SHA256 0ba191421eefd954d1efe9f6c3384e8c8d7455d35a7e79457272e1c29211b09e
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.19 (SunOS)
+
+iEYEARECAAYFAk+3vBMACgkQX3X2B8XHTomnaQCeKmhJVbWHgQ3d6zvXPHPfZKkW
+/NAAnj6aXndq3peOAiesByzhQrpfKtdM
+=f5k+
+-----END PGP SIGNATURE-----
